2017-12-17 Even Rouault <even dot rouault at spatialys dot com>

	* csv/*: update to EPSG v9.2

2017-06-08 Even Rouault <even dot rouault at spatialys dot com>

	* geotiff.h, geo_keyp.h, geo_normalize.c, geo_new.c:
	add GTIFNewEx() and GTIFNewWithMethodsEx() functions that
	accept a user-provided error printing callback (only called
	by geo_normalize right now, instead of fprintf(stderr))
	and a user data handle. Add GTIFGetUserData().
	Upgrade LIBGEOTIFF_VERSION to 1430.

2017-04-14 Even Rouault <even dot rouault at spatialys dot com>

	* *.h, libxtiff/xtiffio.h: replace CPL_DLL by GTIF_DLL

2017-01-10 Even Rouault <even dot rouault at spatialys dot com>

	* csv/*: update to EPSG v9.0 (#83)

2017-01-10 Even Rouault <even dot rouault at spatialys dot com>

	* csv/datum_shift_pref.csv: add overrides for PCS 2065
	(S-JTSK (Ferro) / Krovak)
	Fixes https://trac.osgeo.org/gdal/ticket/4762 and
	https://github.com/OSGeo/proj.4/issues/185

2017-01-10 Even Rouault <even dot rouault at spatialys dot com>

	* csv/datum_shift_pref.csv: add overrides for PCS 2397/2398/2399
	(Pulkovo 1942(83) / 3-degree Gauss-Kruger zone 3,4,5)
	Fixes https://github.com/OSGeo/proj.4/issues/235

2017-01-10 Even Rouault <even dot rouault at spatialys dot com>

	* csv/datum_shift_pref.csv: add overrides for PCS 31251,31252,31253
	(MGI (Ferro) / Austria)
	Fixes https://github.com/OSGeo/proj.4/issues/254

2017-01-10 Even Rouault <even dot rouault at spatialys dot com>

	* csv/build_pcs.py, csv/datum_shift_pref.csv: add mechanism to define
	TOWGS84 parameters per PCS (instead of only relying on the TOWGS84
	parameters of the underlying GCS).
	Add override for EPSG:3844 ("Pulkovo 1942(58) / Stereo70" Romania)
	Fixes https://trac.osgeo.org/geotiff/ticket/52

2017-01-10 Even Rouault <even dot rouault at spatialys dot com>

	* csv/datum_shift_pref.csv: add override for CH1903 (EPSG:4149)
	Fixes https://trac.osgeo.org/geotiff/ticket/73

2016-11-23 Even Rouault <even dot rouault at spatialys dot com>
