@@ -1,3 +1,10 @@
+2018-01-09 Even Rouault <even dot rouault at spatialys dot com>
+
+	* geo_normalize.c: fix potential stack buffer overflow in
+	GTIFAngleToDD()
+	Fixes https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=5059
+	Credit to OSS Fuzz
+
 2017-12-17 Even Rouault <even dot rouault at spatialys dot com>
 
 	* csv/*: update to EPSG v9.2
